[project]
name = "ai-blog-agent"
version = "0.1.0"
description = "AI Blog Agent - Google ADK multi-agent blog writing system"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=0.8.0",
    "google-adk>=0.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
